# tfinit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.fish
.cargo/: config.toml
.github/workflows/: release-plz.yaml
tfinit/: Cargo.toml
tfinit/src/: cli.rs  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
